repair plate number displaying

--- a/src/app/cars/cars-list/cars-list.component.html
+++ b/src/app/cars/cars-list/cars-list.component.html
@@ -24,7 +24,7 @@
                 <tbody>
                     <tr *ngFor="let car of cars; let i = index" (click)="goToCarDetails(car)" class="row-car">
                         <td csImportant [ngClass]="{'row-error': car.isFullyDamaged}">{{car.model}}</td>
-                        <td>{{car.model}}</td>
+                        <td>{{car.plate}}</td>
                         <td>{{car.deliveryDate | date:'shortDate'}}</td>
                         <td>{{car.deadline | date:'shortDate'}}</td>
                         <td>{{car.clientFirstName}} {{car.clientSurname | surnameShortcut}}</td>
