--- a/src/app/cars/car-from/car-form.component.html
+++ b/src/app/cars/car-from/car-form.component.html
@@ -15,72 +15,97 @@
   <form [formGroup]="carForm">
     <div class="row form-group">
       <div class="col-sm-4">
+        <label>Mark</label>
+        <input formControlName="mark" type="text" class="form-control" placeholder="Mark">
+        <p *ngIf="!carForm.get('mark')?.valid && carForm.get('mark')?.dirty" class="error">This field is required!</p>
+      </div>
+      <div class="col-sm-4">
         <label>Model</label>
-        <input formControlName="model" type="text" class="form-control" placeholder="model">
+        <input formControlName="model" type="text" class="form-control" placeholder="Model">
         <p *ngIf="!carForm.get('model')?.valid && carForm.get('model')?.dirty" class="error">This field is required!</p>
       </div>
       <div class="col-sm-4">
-        <label>Type</label>
-        <input formControlName="type" type="text" class="form-control" placeholder="type">
-        <p *ngIf="!carForm.get('type')?.valid && carForm.get('type')?.dirty" class="error">This field is required!</p>
-      </div>
-      <div class="col-sm-4">
-        <label>Plate</label>
-        <input formControlName="plate" type="text" class="form-control" placeholder="plate">
-        <p *ngIf="!carForm.get('plate')?.valid && carForm.get('plate')?.dirty" class="error">This field is required and must contain 3-7 characters</p>
-      </div>
-    </div>
-
-    <div class="row form-group">
-      <div class="col-sm-4">
-        <label>Delivery date</label>
-        <input formControlName="deliveryDate" type="text" class="form-control" placeholder="delivery date">
-        <p *ngIf="!carForm.get('deliveryDate')?.valid && carForm.get('deliveryDate')?.dirty" class="error">This field is required!</p>
-      </div>
-      <div class="col-sm-4">
-        <label>Deadline</label>
-        <input formControlName="deadline" type="text" class="form-control" placeholder="deadline">
-        <p *ngIf="!carForm.get('deadline')?.valid && carForm.get('deadline')?.dirty" class="error">This field is required!</p>
-      </div>
-      <div class="col-sm-4">
-        <label>Is car fully damaged</label>
-        <input formControlName="isFullyDamaged" type="checkbox">
+        <label>Body type</label>
+        <select class="form-control" formControlName="bodyType">
+          <option disable disabled value="">Body type</option>
+          <option *ngFor="let bodyType of bodyTypes | keyvalue" [value]="bodyType.key">
+            {{bodyType.value}}
+          </option>
+        </select>
       </div>
     </div>
 
     <div class="row form-group">
       <div class="col-sm-4">
-        <label>Color</label>
-        <input formControlName="color" type="text" class="form-control" placeholder="color">
-        <p *ngIf="!carForm.get('color')?.valid && carForm.get('color')?.dirty" class="error">This field is required!</p>
+        <label>Course</label>
+        <input formControlName="course" type="text" class="form-control" placeholder="Course">
+        <p *ngIf="!carForm.get('course')?.valid && carForm.get('course')?.dirty" class="error">This field is required!</p>
       </div>
       <div class="col-sm-4">
-        <label>Power</label>
-        <input formControlName="power" type="text" class="form-control" placeholder="power">
-        <p *ngIf="!carForm.get('power')?.valid && carForm.get('power')?.dirty" class="error">This field is required!</p>
+        <label>Production year</label>
+        <select class="form-control" type="text" formControlName="productionYear">
+          <option selected disabled value="">Production year</option>
+          <option *ngFor="let productionYear of productionYears" [value]="productionYear">
+            {{productionYear}}
+          </option>
+        </select>
       </div>
       <div class="col-sm-4">
-        <label>Cost</label>
-        <input formControlName="cost" type="text" class="form-control" placeholder="cost">
-        <p *ngIf="!carForm.get('cost')?.valid && carForm.get('cost')?.dirty" class="error">This field is required!</p>
+        <label>Number Of seats</label>
+        <select class="form-control" type="text" formControlName="numberOfSeats">
+          <option selected disabled value="">Number of seats</option>
+          <option *ngFor="let numberOfSeats of numberOfSeatsArray" [value]="numberOfSeats">
+            {{numberOfSeats}}
+          </option>
+        </select>
       </div>
     </div>
 
     <div class="row form-group">
       <div class="col-sm-4">
-        <label>Client First Name</label>
-        <input formControlName="clientFirstName" type="text" class="form-control" placeholder="client first name">
-        <p *ngIf="!carForm.get('clientFirstName')?.valid && carForm.get('clientFirstName')?.dirty" class="error">This field is required!</p>
+        <label>Engine capacity</label>
+        <input formControlName="engineCapacity" type="text" class="form-control" placeholder="Engine capacity">
+        <p *ngIf="!carForm.get('engineCapacity')?.valid && carForm.get('engineCapacity')?.dirty" class="error">This field is required!</p>
       </div>
       <div class="col-sm-4">
-        <label>Client Last Name</label>
-        <input formControlName="clientSurname" type="text" class="form-control" placeholder="client last name">
-        <p *ngIf="!carForm.get('clientSurname')?.valid && carForm.get('clientSurname')?.dirty" class="error">This field is required!</p>
+        <label>Engine power</label>
+        <input formControlName="enginePower" type="text" class="form-control" placeholder="Engine power">
+        <p *ngIf="!carForm.get('enginePower')?.valid && carForm.get('enginePower')?.dirty" class="error">This field is required!</p>
       </div>
       <div class="col-sm-4">
-        <label>Year</label>
-        <input formControlName="year" type="text" class="form-control" placeholder="year">
-        <p *ngIf="!carForm.get('year')?.valid && carForm.get('year')?.dirty" class="error">This field is required!</p>
+        <label>Engine type</label>
+        <select class="form-control" type="text" formControlName="engineType">
+          <option selected disabled value="">Engine type</option>
+          <option *ngFor="let engineType of engineTypes | keyvalue" [value]="engineType.key">
+            {{engineType.value}}
+          </option>
+        </select>
+      </div>
+    </div>
+
+    <div class="row form-group">
+      <div class="col-sm-4">
+        <label>Vehicle condition</label>
+        <select class="form-control" type="text" formControlName="vehicleCondition">
+          <option selected disabled value="">Vehicle condition</option>
+          <option *ngFor="let condition of condition | keyvalue" [value]="condition.key">
+            {{condition.value}}
+          </option>
+        </select>
+      </div>
+      <div class="col-sm-4">
+        <label>Price</label>
+        <input formControlName="price" type="text" class="form-control" placeholder="Price">
+        <p *ngIf="!carForm.get('price')?.valid && carForm.get('price')?.dirty" class="error">This field is required!</p>
+      </div>
+      <div class="col-sm-4">
+        <label>Is damaged</label>
+        <select class="form-control" type="text" formControlName="damaged">
+          <option selected disabled value="">Is damaged</option>
+          <option *ngFor="let state of damaged | keyvalue" [value]="state.key">
+            {{state.value}}
+          </option>
+        </select>
       </div>
     </div>
 
