--- a/src/app/cars/car-from/car-form.component.html
+++ b/src/app/cars/car-from/car-form.component.html
@@ -10,19 +10,22 @@
   <p class="data-header">Add a new car</p>
 </div>
 
-
 <div class="data-container">
   <form [formGroup]="carForm">
     <div class="row form-group">
       <div class="col-sm-4">
         <label>Mark</label>
         <input formControlName="mark" type="text" class="form-control" placeholder="Mark">
-        <p *ngIf="!carForm.get('mark')?.valid && carForm.get('mark')?.dirty" class="error">This field is required!</p>
+        <div *ngIf="mark.errors && (mark.dirty || mark.touched)">
+          <p *ngIf="mark.errors?.['required']" class="error">This field is required!</p>
+        </div>
       </div>
       <div class="col-sm-4">
         <label>Model</label>
         <input formControlName="model" type="text" class="form-control" placeholder="Model">
-        <p *ngIf="!carForm.get('model')?.valid && carForm.get('model')?.dirty" class="error">This field is required!</p>
+        <div *ngIf="model.errors && (model.dirty || model.touched)">
+          <p *ngIf="model.errors?.['required']" class="error">This field is required!</p>
+        </div>
       </div>
       <div class="col-sm-4">
         <label>Body type</label>
@@ -39,7 +42,10 @@
       <div class="col-sm-4">
         <label>Course</label>
         <input formControlName="course" type="text" class="form-control" placeholder="Course">
-        <p *ngIf="!carForm.get('course')?.valid && carForm.get('course')?.dirty" class="error">This field is required!</p>
+        <div *ngIf="course.errors && (course.dirty || course.touched)">
+          <p *ngIf="course.errors?.['required']" class="error">This field is required!</p>
+          <p *ngIf="course.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+        </div>
       </div>
       <div class="col-sm-4">
         <label>Production year</label>
@@ -65,12 +71,18 @@
       <div class="col-sm-4">
         <label>Engine capacity</label>
         <input formControlName="engineCapacity" type="text" class="form-control" placeholder="Engine capacity">
-        <p *ngIf="!carForm.get('engineCapacity')?.valid && carForm.get('engineCapacity')?.dirty" class="error">This field is required!</p>
+        <div *ngIf="engineCapacity.errors && (engineCapacity.dirty || engineCapacity.touched)">
+          <p *ngIf="engineCapacity.errors?.['required']" class="error">This field is required!</p>
+          <p *ngIf="engineCapacity.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+        </div>
       </div>
       <div class="col-sm-4">
         <label>Engine power</label>
         <input formControlName="enginePower" type="text" class="form-control" placeholder="Engine power">
-        <p *ngIf="!carForm.get('enginePower')?.valid && carForm.get('enginePower')?.dirty" class="error">This field is required!</p>
+        <div *ngIf="enginePower.errors && (enginePower.dirty || enginePower.touched)">
+          <p *ngIf="enginePower.errors?.['required']" class="error">This field is required!</p>
+          <p *ngIf="enginePower.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+        </div>
       </div>
       <div class="col-sm-4">
         <label>Engine type</label>
@@ -88,7 +100,7 @@
         <label>Vehicle condition</label>
         <select class="form-control" type="text" formControlName="vehicleCondition">
           <option selected disabled value="">Vehicle condition</option>
-          <option *ngFor="let condition of condition | keyvalue" [value]="condition.key">
+          <option *ngFor="let condition of conditionStatuses | keyvalue" [value]="condition.key">
             {{condition.value}}
           </option>
         </select>
@@ -96,13 +108,16 @@
       <div class="col-sm-4">
         <label>Price</label>
         <input formControlName="price" type="text" class="form-control" placeholder="Price">
-        <p *ngIf="!carForm.get('price')?.valid && carForm.get('price')?.dirty" class="error">This field is required!</p>
+        <div *ngIf="price.errors && (price.dirty || price.touched)">
+          <p *ngIf="price.errors?.['required']" class="error">This field is required!</p>
+          <p *ngIf="price.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+        </div>
       </div>
       <div class="col-sm-4">
         <label>Is damaged</label>
         <select class="form-control" type="text" formControlName="damaged">
           <option selected disabled value="">Is damaged</option>
-          <option *ngFor="let state of damaged | keyvalue" [value]="state.key">
+          <option *ngFor="let state of damageStatuses | keyvalue" [value]="state.key">
             {{state.value}}
           </option>
         </select>
