Motorcycle form added and done some refactoring

--- a/src/app/core-module/sidebar/sidebar.component.html
+++ b/src/app/core-module/sidebar/sidebar.component.html
@@ -4,6 +4,7 @@
     <ul>
       <li [routerLink]="['cars']" [routerLinkActive]="'active'">Cars list</li>
       <li [routerLink]="['add-car']" [routerLinkActive]="'active'">Add new car</li>
+      <li [routerLink]="['add-motorcycle']" [routerLinkActive]="'active'">Add new motorcycle</li>
     </ul>
   </nav>
 </div>
