--- a/src/app/vehicle/car/car-details/car-details.component.html
+++ b/src/app/vehicle/car/car-details/car-details.component.html
@@ -8,4 +8,4 @@
 
 <p class="data-header">Edit {{car.model}}</p>
 
-<cs-car-form [car]="car" [isUpdateForm]="true"></cs-car-form>
+<app-car-form [car]="car" [isUpdateForm]="true"></app-car-form>
