--- a/src/app/core-module/sidebar/sidebar.component.less
+++ b/src/app/core-module/sidebar/sidebar.component.less
@@ -25,13 +25,23 @@
       padding: 10px;
       border-bottom: 1px solid @white;
     }
+
     li:hover {
-      background: #10447d;
+      background: #00004d;
       transition: linear 300ms;
     }
 
     li.active {
       background: @cyan;
     }
+  }
+
+  .main-section-active {
+    background: @cyan;
+  }
+
+  .collapsed-section {
+    margin-left: 5px;
+    border-left: 1px solid @white;
   }
 }
