car list pagination

--- a/src/app/vehicle/car/cars-list/cars-list.component.html
+++ b/src/app/vehicle/car/cars-list/cars-list.component.html
@@ -5,8 +5,18 @@
     <p>List of cars in service</p>
   </div>
 </cs-header>
-
+<div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Dropdown button
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+    <a class="dropdown-item" href="#">Action</a>
+    <a class="dropdown-item" href="#">Another action</a>
+    <a class="dropdown-item" href="#">Something else here</a>
+  </div>
+</div>
 <div class="container">
+
     <div class="row">
         <div class="col-sm-12">
             <table *ngIf="cars && cars.length > 0; else noCarsInfo" class="cs-table table table-striped">
@@ -30,6 +40,74 @@
                     </tr>
                 </tbody>
             </table>
+          <nav aria-label="..." *ngIf="totalPages > 1">
+            <ul class="pagination">
+              <li class="page-item page-btn" [ngClass]="{'disabled': currentPage === 1}">
+                <a class="page-link" tabindex="-1" *ngIf="currentPage > 1" (click)="loadCarsListByPageNo(currentPage - 1)">Previous</a>
+                <a class="page-link" tabindex="-1" *ngIf="currentPage === 1">Previous</a>
+              </li>
+
+              <div class="page-buttons" *ngIf="currentPage === 1">
+                <li class="page-item page-btn active">
+                  <a class="page-link">
+                    {{currentPage}} <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="page-item page-btn" (click)="loadCarsListByPageNo(currentPage + 1)">
+                  <a class="page-link">
+                    {{currentPage + 1}}
+                  </a>
+                </li>
+                <li class="page-item page-btn" *ngIf="totalPages >= 3" (click)="loadCarsListByPageNo(currentPage + 2)">
+                  <a class="page-link">
+                    {{currentPage + 2}}
+                  </a>
+                </li>
+              </div>
+
+              <div class="page-buttons" *ngIf="currentPage > 1 && currentPage < lastPage">
+                <li class="page-item page-btn" (click)="loadCarsListByPageNo(currentPage - 1)">
+                  <a class="page-link">
+                    {{currentPage - 1}}
+                  </a>
+                </li>
+                <li class="page-item page-btn active">
+                  <a class="page-link">
+                    {{currentPage}} <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+                <li class="page-item page-btn" *ngIf="totalPages >= 3" (click)="loadCarsListByPageNo(currentPage + 1)">
+                  <a class="page-link">
+                    {{currentPage + 1}}
+                  </a>
+                </li>
+              </div>
+
+              <div class="page-buttons" *ngIf="currentPage === lastPage">
+                <li class="page-item page-btn" *ngIf="totalPages >= 3" (click)="loadCarsListByPageNo(currentPage - 2)">
+                  <a class="page-link">
+                    {{currentPage - 2}}
+                  </a>
+                </li>
+                <li class="page-item page-btn" (click)="loadCarsListByPageNo(currentPage - 1)">
+                  <a class="page-link">
+                    {{currentPage - 1}}
+                  </a>
+                </li>
+                <li class="page-item page-btn active">
+                  <a class="page-link">
+                    {{currentPage}} <span class="sr-only">(current)</span>
+                  </a>
+                </li>
+              </div>
+
+              <li class="page-item page-btn" [ngClass]="{'disabled': currentPage === lastPage}">
+                <a class="page-link" tabindex="-1" *ngIf="currentPage < lastPage" (click)="loadCarsListByPageNo(currentPage + 1)">Next</a>
+                <a class="page-link" tabindex="-1" *ngIf="currentPage === lastPage">Next</a>
+              </li>
+            </ul>
+          </nav>
+
             <ng-template #noCarsInfo>
                 <div class="no-cars-info">
                     <p>Currently no cars in service</p>
