--- a/src/app/vehicle/car/cars-list/cars-list.component.less
+++ b/src/app/vehicle/car/cars-list/cars-list.component.less
@@ -14,3 +14,21 @@
 .row-car {
   cursor: pointer;
 }
+
+.row-car:hover {
+  background: #c2c2a3 !important;
+  transition: linear 300ms;
+}
+
+.page-btn {
+  cursor: pointer;
+}
+
+.page-buttons {
+  display: flex;
+}
+
+a:hover {
+  background: #518bbf !important;
+  transition: linear 300ms !important;
+}
