almost finish pagination and add collapse library

--- a/src/app/core-module/sidebar/sidebar.component.html
+++ b/src/app/core-module/sidebar/sidebar.component.html
@@ -2,13 +2,18 @@
   <img src="assets/logo.png" class="logo">
   <nav>
     <ul>
-      <li (click)="showVehiclesListActionBars()" [ngClass]="{'main-section-active': vehiclesListActionBarsShown}">Vehicles list</li>
-      <div *ngIf="vehiclesListActionBarsShown" [ngClass]="{'collapsed-section': vehiclesListActionBarsShown}">
+      <li (click)="showVehiclesListActionBars()" [ngClass]="{'main-section-active': vehiclesListActionBarsShown}"
+          [collapse]="vehiclesList">Vehicles list
+      </li>
+      <div [ngClass]="{'collapsed-section': vehiclesListActionBarsShown}" collapseContent #vehiclesList="collapseContent">
         <li [routerLink]="['cars']" [routerLinkActive]="'active'">Cars list</li>
         <li [routerLink]="['motorcycles']" [routerLinkActive]="'active'">Motorcycles list</li>
       </div>
-      <li (click)="showVehicleActionBars()" [ngClass]="{'main-section-active': vehicleFormsActionBarsShown}">Add new vehicle</li>
-      <div *ngIf="vehicleFormsActionBarsShown" [ngClass]="{'collapsed-section': vehicleFormsActionBarsShown}">
+      <li (click)="showVehicleActionBars()" [ngClass]="{'main-section-active': vehicleFormsActionBarsShown}"
+          [collapse]="vehicleForms">
+        Add new vehicle
+      </li>
+      <div [ngClass]="{'collapsed-section': vehicleFormsActionBarsShown}" collapseContent #vehicleForms="collapseContent">
         <li [routerLink]="['add-car']" [routerLinkActive]="'active'">Add new car</li>
         <li [routerLink]="['add-motorcycle']" [routerLinkActive]="'active'">Add new motorcycle</li>
       </div>
