--- a/src/app/vehicle/car/cars-list/cars-list.component.less
+++ b/src/app/vehicle/car/cars-list/cars-list.component.less
@@ -32,3 +32,25 @@ a:hover {
   background: #518bbf !important;
   transition: linear 300ms !important;
 }
+
+.paging__container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.paging__select-elements-on-page {
+  height: 34px;
+  padding-top: 3px;
+}
+
+.paging-container--float-right {
+  float: right;
+}
+
+.paging__select-elements-on-page--width {
+  width: 213px;
+}
+
+.paging__select-elements-on-page--margin {
+  margin-bottom: 16px;
+}
