user registration and authentication process

--- a/src/app/vehicle/car/car-details/car-details.component.html
+++ b/src/app/vehicle/car/car-details/car-details.component.html
@@ -1,3 +1,4 @@
+<cs-main-content>
 <cs-header>
   <p levels>cars/{{car.model}}</p>
 
@@ -9,3 +10,4 @@
 <p class="data-header">Edit {{car.model}}</p>
 
 <app-car-form [car]="car" [isUpdateForm]="true"></app-car-form>
+</cs-main-content>
