--- a/src/app/shared-module/header/header.component.html
+++ b/src/app/shared-module/header/header.component.html
@@ -1,9 +1,16 @@
 <div class="header">
-  <div class="levels">
-    <ng-content select="[levels]"></ng-content>
+  <div>
+    <div class="header__levels">
+      <ng-content select="[levels]"></ng-content>
+    </div>
+
+    <div class="other-content">
+      <ng-content select="[content]"></ng-content>
+    </div>
   </div>
 
-  <div class="other-content">
-    <ng-content select="[content]"></ng-content>
+  <div class="header__btn--margin">
+    <a routerLink="/signup"><button type="button" class="btn btn-outline-success">Create account</button></a>
+    <a routerLink="/login"><button type="button" class="btn btn-outline-success">Login</button></a>
   </div>
 </div>
