--- a/src/app/shared-module/header/header.component.less
+++ b/src/app/shared-module/header/header.component.less
@@ -4,11 +4,18 @@
   background: @white;
   padding: 15px;
   margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
 
-  .levels {
+  &__levels {
     font-size: 24px;
     font-weight: 700;
     color: @blue;
     text-transform: uppercase;
+  }
+
+  &__btn--margin {
+    margin-top: auto;;
+    margin-bottom: auto;
   }
 }
