--- a/src/app/vehicle/motorcycle/motorcycle-form/motorcycle-form.component.html
+++ b/src/app/vehicle/motorcycle/motorcycle-form/motorcycle-form.component.html
@@ -17,16 +17,16 @@
         <label>Mark</label>
         <input formControlName="mark" type="text" class="form-control" placeholder="Mark">
         <div *ngIf="mark.errors && (mark.dirty || mark.touched)">
-          <p *ngIf="mark.errors?.['required']" class="error">This field is required!</p>
-          <p *ngIf="mark.errors?.['minLength']" class="error">Text cannot be shorter than 2 characters</p>
+          <p *ngIf="mark.errors?.['required']" class="error-info">This field is required!</p>
+          <p *ngIf="mark.errors?.['minLength']" class="error-info">Text cannot be shorter than 2 characters</p>
         </div>
       </div>
       <div class="col-sm-4">
         <label>Model</label>
         <input formControlName="model" type="text" class="form-control" placeholder="Model">
         <div *ngIf="model.errors && (model.dirty || model.touched)">
-          <p *ngIf="model.errors?.['required']" class="error">This field is required!</p>
-          <p *ngIf="model.errors?.['minLength']" class="error">Text cannot be shorter than 2 characters</p>
+          <p *ngIf="model.errors?.['required']" class="error-info">This field is required!</p>
+          <p *ngIf="model.errors?.['minLength']" class="error-info">Text cannot be shorter than 2 characters</p>
         </div>
       </div>
       <div class="col-sm-4">
@@ -45,8 +45,8 @@
         <label>Course</label>
         <input formControlName="course" type="text" class="form-control" placeholder="Course">
         <div *ngIf="course.errors && (course.dirty || course.touched)">
-          <p *ngIf="course.errors?.['required']" class="error">This field is required!</p>
-          <p *ngIf="course.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+          <p *ngIf="course.errors?.['required']" class="error-info">This field is required!</p>
+          <p *ngIf="course.errors?.['onlyDigits']" class="error-info">Incorrect value!</p>
         </div>
       </div>
       <div class="col-sm-4">
@@ -65,16 +65,16 @@
         <label>Engine capacity</label>
         <input formControlName="engineCapacity" type="text" class="form-control" placeholder="Engine capacity">
         <div *ngIf="engineCapacity.errors && (engineCapacity.dirty || engineCapacity.touched)">
-          <p *ngIf="engineCapacity.errors?.['required']" class="error">This field is required!</p>
-          <p *ngIf="engineCapacity.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+          <p *ngIf="engineCapacity.errors?.['required']" class="error-info">This field is required!</p>
+          <p *ngIf="engineCapacity.errors?.['onlyDigits']" class="error-info">Incorrect value!</p>
         </div>
       </div>
       <div class="col-sm-4">
         <label>Engine power</label>
         <input formControlName="enginePower" type="text" class="form-control" placeholder="Engine power">
         <div *ngIf="enginePower.errors && (enginePower.dirty || enginePower.touched)">
-          <p *ngIf="enginePower.errors?.['required']" class="error">This field is required!</p>
-          <p *ngIf="enginePower.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+          <p *ngIf="enginePower.errors?.['required']" class="error-info">This field is required!</p>
+          <p *ngIf="enginePower.errors?.['onlyDigits']" class="error-info">Incorrect value!</p>
         </div>
       </div>
       <div class="col-sm-4">
@@ -102,8 +102,8 @@
         <label>Price</label>
         <input formControlName="price" type="text" class="form-control" placeholder="Price">
         <div *ngIf="price.errors && (price.dirty || price.touched)">
-          <p *ngIf="price.errors?.['required']" class="error">This field is required!</p>
-          <p *ngIf="price.errors?.['onlyDigits']" class="error">Incorrect value!</p>
+          <p *ngIf="price.errors?.['required']" class="error-info">This field is required!</p>
+          <p *ngIf="price.errors?.['onlyDigits']" class="error-info">Incorrect value!</p>
         </div>
       </div>
       <div class="col-sm-4">
