--- a/src/assets/styles/base.less
+++ b/src/assets/styles/base.less
@@ -18,9 +18,18 @@ body {
   margin: 15px;
 }
 
-.error {
+.error-info {
   background: @red;
   color: @white;
   font-size: 11px;
   padding: 4px 8px;
+  border-radius: 0.375rem;
+}
+
+.error-input {
+  border: 1px solid @red;
+}
+
+.error-label {
+  color: @red;
 }
