--- a/src/app/vehicle/car/car-details/car-details.component.html
+++ b/src/app/vehicle/car/car-details/car-details.component.html
@@ -7,7 +7,5 @@
   </div>
 </cs-header>
 
-<p class="data-header">Edit {{car.model}}</p>
-
-<app-car-form [car]="car" [isUpdateForm]="true"></app-car-form>
+<app-car-form [car]="car" [isEditForm]="true"></app-car-form>
 </cs-main-content>
