--- a/src/app/vehicle/car/cars-list/cars-list.component.less
+++ b/src/app/vehicle/car/cars-list/cars-list.component.less
@@ -22,6 +22,14 @@
 
 .page-btn {
   cursor: pointer;
+
+  &_margin-left {
+    margin-left: 5px;
+  }
+
+  &_margin-right {
+    margin-right: 5px;
+  }
 }
 
 .page-buttons {
