--- a/src/app/shared-module/header/header.component.html
+++ b/src/app/shared-module/header/header.component.html
@@ -9,8 +9,11 @@
     </div>
   </div>
 
-  <div class="header__btn--margin">
+  <div class="header__btn--margin" *ngIf="!isUserLoggedIn">
     <a routerLink="/signup"><button type="button" class="btn btn-outline-success">Create account</button></a>
     <a routerLink="/login"><button type="button" class="btn btn-outline-success">Login</button></a>
+  </div>
+  <div class="header__btn--margin" *ngIf="isUserLoggedIn">
+    <a><button type="button" class="btn btn-outline-success" (click)="logOut()">Logout</button></a>
   </div>
 </div>
