add AuthGuard class

--- a/src/app/vehicle/car/component/cars-list/cars-list.component.html
+++ b/src/app/vehicle/car/component/cars-list/cars-list.component.html
@@ -91,7 +91,7 @@
                 <thead>
                     <tr>
                         <th>
-                          Mark <img src="assets/icons/arrow-down.svg">
+                          Mark <img src="../../../../../assets/icons/arrow-down.svg">
                         </th>
                         <th>Model</th>
                         <th>Production year</th>
